// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages/Swap/useGetSwapInfo > exactAmountIn > returns swap in correct format if a trade is found 1`] = `
{
  "error": undefined,
  "isLoading": false,
  "swap": {
    "direction": "exactAmountIn",
    "exchangeRate": "0.499374217772215269",
    "expectedToTokenAmountReceivedWei": "499374217772215269",
    "fromToken": {
      "address": "0x12eb9ef44de5fbea1b2f5ff7a9a375cae9bfb2eb",
      "asset": "/src/assets/img/tokens/bnb.svg",
      "decimals": 18,
      "isNative": true,
      "symbol": "BNB",
    },
    "fromTokenAmountSoldWei": "1000000000000000000",
    "minimumToTokenAmountReceivedWei": "496889768927577382",
    "priceImpactPercentage": 50.06,
    "routePath": [
      "0xae13d989daC2f0dEbFf460aC112a837C89BAa7cd",
      "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
    ],
    "toToken": {
      "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
      "asset": "/src/assets/img/tokens/xvs.svg",
      "decimals": 18,
      "symbol": "XVS",
    },
  },
}
`;

exports[`pages/Swap/useGetSwapInfo > exactAmountOut > returns swap in correct format if a trade is found 1`] = `
{
  "error": undefined,
  "isLoading": false,
  "swap": {
    "direction": "exactAmountOut",
    "exchangeRate": "0.49875",
    "expectedFromTokenAmountSoldWei": "1002506265664160402",
    "fromToken": {
      "address": "0x12eb9ef44de5fbea1b2f5ff7a9a375cae9bfb2eb",
      "asset": "/src/assets/img/tokens/bnb.svg",
      "decimals": 18,
      "isNative": true,
      "symbol": "BNB",
    },
    "maximumFromTokenAmountSoldWei": "1007518796992481204",
    "priceImpactPercentage": 50.13,
    "routePath": [
      "0xae13d989daC2f0dEbFf460aC112a837C89BAa7cd",
      "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
    ],
    "toToken": {
      "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
      "asset": "/src/assets/img/tokens/xvs.svg",
      "decimals": 18,
      "symbol": "XVS",
    },
    "toTokenAmountReceivedWei": "500000000000000000",
  },
}
`;
